--- a/roles/docker-compose/tasks/compose.yml
+++ b/roles/docker-compose/tasks/compose.yml
@@ -99,6 +99,7 @@
             - "traefik.http.routers.homepage_https.tls.certresolver=le_http"
             - "traefik.http.services.homepage-app.loadbalancer.server.port=80"
           container_name:             website
+          restart:                    unless-stopped
 
         mumble-web:
           image:                      rankenstein/mumble-web
@@ -118,6 +119,7 @@
             - "traefik.http.routers.mumble_https.tls.certresolver=le_http"
             - "traefik.http.services.mumble-app.loadbalancer.server.port=80"
           container_name:             mumble-web
+          restart:                    unless-stopped
 
         pgadmin:
           image:                      dpage/pgadmin4:latest
@@ -140,6 +142,7 @@
             - "traefik.http.routers.pgadmin_https.tls.certresolver=le_http"
             - "traefik.http.services.pgadmin-app.loadbalancer.server.port=80"
           container_name:             pgadmin
+          restart:                    unless-stopped
 
         matrix-appservice-irc:
           image:                      tulir/matrix-appservice-irc:latest
@@ -155,6 +158,7 @@
             - /root/matrix-appservice-irc/appservice-registration-irc.yaml:/app/appservice-registration-irc.yaml
             - /root/matrix-appservice-irc/config.yaml:/app/config.yaml
           container_name:             matrix-appservice-irc
+          restart:                    unless-stopped
 
         down:
           image:                      nginx:latest
@@ -165,6 +169,7 @@
           networks:
             - web
           container_name:             down
+          restart:                    unless-stopped
 
         pretix-database:
           image:                      postgres:9.6-alpine
@@ -176,12 +181,14 @@
             - pretix-postgres:/var/lib/postgresql/data
           networks:
             - web
+          restart:                    unless-stopped
 
         redis:
           image:                      redis:latest
           container_name:             redis
           networks:
             - web
+          restart:                    unless-stopped
 
         pretix:
           image:                      registry.git.desti.io/n0emis/pretix:latest
@@ -203,6 +210,7 @@
             - "traefik.http.routers.pretix_https.entryPoints=https"
             - "traefik.http.routers.pretix_https.tls.certresolver=le_http"
             - "traefik.http.services.pretix-app.loadbalancer.server.port=80"
+          restart:                    unless-stopped
 
         murmur:
           image:                      mattikus/murmur:latest
@@ -217,6 +225,7 @@
             - murmur-data:/data
           networks:
             - web
+          restart:                    unless-stopped
 
         maubot:
           image:                      dock.mau.dev/maubot/maubot:latest
@@ -237,6 +246,7 @@
             - "traefik.http.routers.maubot_https.tls.certresolver=le_http"
             - "traefik.http.services.maubot-app.loadbalancer.server.port=8080"
           container_name:             maubot
+          restart:                    unless-stopped
 
         dokuwiki:
           image:                    bitnami/dokuwiki:0
@@ -250,6 +260,7 @@
             DOKUWIKI_PASSWORD: "{{ dokuwiki_password }}"
             DOKUWIKI_EMAIL: "dokuwiki-admin@chaos.jetzt"
             DOKUWIKI_WIKI_NAME: "{{ base_url }} Wiki"
+          restart:                    unless-stopped
           container_name:             dokuwiki
           labels:
             - "traefik.enable=true"
