replace synapse docker container
Co-authored-by: Leo Maroni <git@em0lar.de>

--- a/group_vars/dev.yml
+++ b/group_vars/dev.yml
@@ -1,2 +1,6 @@
 ---
 base_url: dev.chaos.jetzt
+
+synapse_log_level: "DEBUG"
+synapse_root_log_level: "DEBUG"
+synapse_storage_sql_log_level: "DEBUG"
