--- a/.gitmodules
+++ b/.gitmodules
@@ -31,3 +31,6 @@
 [submodule "roles/geerlingguy.nodejs"]
 	path = roles/geerlingguy.nodejs
 	url = https://github.com/geerlingguy/ansible-role-nodejs.git
+[submodule "roles/n0emis.synapse"]
+	path = roles/n0emis.synapse
+	url = https://github.com/n0emis/ansible-role-synapse
