--- a/group_vars/all.yml
+++ b/group_vars/all.yml
@@ -18,11 +18,36 @@ ansible_python_interpreter: "/usr/bin/python3"
 
 motd_path: ../../../templates/motd_knot
 
-synapse_db_password: "{{ lookup('passwordstore', 'infra/matrix/db create=true') }}"
-synapse_registration_secret: "{{ lookup('passwordstore', 'infra/matrix/registration') }}"
-synapse_macaroon_secret: "{{ lookup('passwordstore', 'infra/matrix/macaroon') }}"
+synapse_database_host: "localhost"
+synapse_database_database: "synapse"
+synapse_database_user: "synapse"
+synapse_database_password: "{{ lookup('passwordstore', 'infra/matrix/db create=true') }}"
+synapse_registration_shared_secret: "{{ lookup('passwordstore', 'infra/matrix/registration') }}"
+synapse_macaroon_secret_key: "{{ lookup('passwordstore', 'infra/matrix/macaroon') }}"
 synapse_form_secret: "{{ lookup('passwordstore', 'infra/matrix/form') }}"
 synapse_signing_key: "{{ lookup('passwordstore', 'infra/matrix/signing') }}"
+synapse_allow_public_rooms_over_federation: true
+synapse_enable_group_creation: true
+synapse_enable_registration: true
+synapse_domain: "{{ base_url }}"
+synapse_server_fqdn_matrix: "matrix.{{ synapse_domain }}"
+synapse_pip_version: "1.12.4"
+synapse_auto_join_rooms:
+  - "#grosse_halle:{{ base_url }}"
+  - "#allgemein:{{ base_url }}"
+synapse_email_enabled: true
+synapse_email_smtp_host: "{{ lookup('passwordstore', 'infra/mail subkey=url') }}"
+synapse_email_smtp_port: 587
+synapse_email_smtp_user: "{{ lookup('passwordstore', 'infra/mail subkey=user') }}"
+synapse_email_smtp_password: "{{ lookup('passwordstore', 'infra/mail') }}"
+synapse_email_smtp_require_transport_security: no
+synapse_email_client_base_url: "https://chat.{{ base_url }}"
+
+synapse_http_listener_port: '85'
+synapse_federation_listener_port: '86'
+
+# TODO: setup appservices
+#synapse_app_service_config_files:
 
 murmur_registry_password: "{{ lookup('passwordstore', 'infra/murmur/registry create=true') }}"
 
@@ -150,9 +175,15 @@ postgresql_python_library: python3-psycopg2
 postgresql_users:
   - name: pretix
     password: "{{ lookup('passwordstore', 'infra/pretix/db') }}"
+  - name: "{{ synapse_database_user }}"
+    password: "{{ synapse_database_password }}"
 postgresql_databases:
   - name: pretix
     owner: pretix
+  - name: synapse
+    owner: synapse
+    lc_collate: 'C'
+    lc_ctype: 'C'
 
 redis_requirepass: "{{ lookup('passwordstore', 'infra/redis') }}"
 
