--- a/roles/docker-compose/tasks/compose.yml
+++ b/roles/docker-compose/tasks/compose.yml
@@ -14,7 +14,7 @@
           volumes:
             - postgres-data:/var/lib/postgresql/data
           environment:
-            - POSTGRES_PASSWORD={{ synapse_db_password }}
+#            - POSTGRES_PASSWORD={{ synapse_db_password }}
             - POSTGRES_USER=synapse
             - POSTGRES_INITDB_ARGS=--encoding=UTF-8 --lc-collate=C --lc-ctype=C
           container_name:             synapse-postgres
