--- a/roles/docker-compose/tasks/container.yml
+++ b/roles/docker-compose/tasks/container.yml
@@ -1,6 +1,6 @@
 ---
 # Matrix
-- name: Create/Start synapse-postgres docker container
+- name: Stop synapse-postgres docker container
   docker_container:
     name: "synapse-postgres"
     image: "postgres:11"
@@ -8,12 +8,12 @@
     volumes:
       - root_postgres-data:/var/lib/postgresql/data
     env:
-      POSTGRES_PASSWORD: "{{ synapse_db_password }}"
+#      POSTGRES_PASSWORD: "{{ synapse_db_password }}"
       POSTGRES_USER: "synapse"
       POSTGRES_INITDB_ARGS: "--encoding=UTF-8 --lc-collate=C --lc-ctype=C"
-    state: started
+    state: stopped
 
-- name: Create/Start synapse docker container
+- name: Stop synapse docker container
   docker_container:
     name: "synapse"
     image: "matrixdotorg/synapse:v1.12.3"
@@ -36,7 +36,7 @@
       traefik.http.routers.synapse_https.entryPoints: "https"
       traefik.http.routers.synapse_https.tls.certresolver: "le_http"
       traefik.http.services.synapse-app.loadbalancer.server.port: "8008"
-    state: started
+    state: stopped
 
 - name: Create/Start riot docker container
   docker_container:
@@ -49,10 +49,10 @@
       - /root/riot/config.json:/app/config.json
     labels:
       traefik.enable: "true"
-      traefik.http.routers.riot_http.rule: "Host(`chat.{{ base_url }}`) || Host(`matrix.{{ base_url }}`)"
+      traefik.http.routers.riot_http.rule: "Host(`chat.{{ base_url }}`)"
       traefik.http.routers.riot_http.entryPoints: "http"
       traefik.http.routers.riot_http.middlewares: "https_redirect@file"
-      traefik.http.routers.riot_https.rule: "Host(`chat.{{ base_url }}`) || Host(`matrix.{{ base_url }}`)"
+      traefik.http.routers.riot_https.rule: "Host(`chat.{{ base_url }}`)"
       traefik.http.routers.riot_https.priority: "10"
       traefik.http.routers.riot_https.entryPoints: "https"
       traefik.http.routers.riot_https.tls.certresolver: "le_http"
@@ -219,7 +219,7 @@
     name: "pretix"
     image: "registry.git.desti.io/n0emis/pretix:latest"
     restart_policy: unless-stopped
-    state: absent
+    state: stopped
     links:
       - pretix-redis:redis
       - pretix-postgres:pretix-database
