--- a/roles/traefik/tasks/main.yml
+++ b/roles/traefik/tasks/main.yml
@@ -1,36 +1,4 @@
 ---
-- name: make sure traefik config-directories exist
-  file:
-    path: '{{ item }}'
-    state: directory
-    recurse: yes
-    owner: root
-    group: root
-    mode: 0755
-  with_items:
-  - /etc/traefik/dynamic
-  - /etc/traefik/letsencrypt
-
-- name: copy config files
-  template:
-    dest: '/etc/traefik/{{ item }}'
-    src: '{{ item }}'
-    owner: root
-    group: root
-    mode: 0644
-  with_items:
-  - traefik.yml
-  - dynamic/middlewares.yml
-  - dynamic/dashboard.yml
-  - dynamic/tls.yml
-
-- name: change permissions for certificate storage
-  file:
-    path: /etc/traefik/letsencrypt/acme.json
-    owner: root
-    group: root
-    mode: 0600
-
 - name: Ensure traefik docker-container exists
   docker_container:
     name: traefik
@@ -44,29 +12,4 @@
       - /var/run/docker.sock:/var/run/docker.sock
       - /etc/traefik:/etc/traefik/
       - /etc/traefik/letsencrypt:/letsencrypt
-
-- name: Make private cert folder readable for certs group
-  file:
-    path: "/etc/ssl/private"
-    group: "ssl-cert"
-    mode: "0750"
-    state: directory
-
-- name: copy certificate export script
-  template:
-    dest: /etc/traefik/dumpcerts.sh
-    src: dumpcerts.sh
-    owner: root
-    group: root
-    mode: 0744
-
-- name: setup traefik certificate-exporter cronjob
-  cron:
-    name: traefik certificate-exporter
-    hour: "2"
-    user: root
-    job: '/etc/traefik/dumpcerts.sh /etc/traefik/letsencrypt/acme.json /etc/ssl/'
-
-- name: run traefik certificate-exporter
-  command: '/etc/traefik/dumpcerts.sh /etc/traefik/letsencrypt/acme.json /etc/ssl/'
-  become: true
+    state: stopped
