--- a/playbooks/site.yml
+++ b/playbooks/site.yml
@@ -169,6 +169,7 @@
         - /var/lib/docker/volumes/root_maubot-data/_data/plugins
         - /var/lib/docker/volumes/root_maubot-data/_data/trash
       ignore_errors: yes
+      notify: restart maubot
 
     - name: Change ownership of new data
       file:
@@ -177,12 +178,13 @@
         owner: "maubot"
         group: "maubot"
         state: directory
+      notify: restart maubot
 
     - name: Add traefik config
       template:
         src: ../templates/traefik/maubot.yml
         dest: /etc/traefik/dynamic/maubot.yml
-  tags: matrix
+  tags: matrix, maubot
 
 - hosts: web
   roles:
