--- a/group_vars/all.yml
+++ b/group_vars/all.yml
@@ -272,7 +272,7 @@ mumble_web: yes
 mumble_web_path: "/usr/lib/node_modules/mumble-web"
 # to define use yaml multiline string
 mumble_web_config: ""
-mumble_web_supplementary_groups: "certs"
+mumble_web_supplementary_groups: "ssl-cert"
 mumble_web_listen: "84"
 mumble_web_ssl_activated: False
 mumble_web_ssl_target: True
